# RAG-System-API

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: generate_dummy_data.py
docker/: Dockerfile
docs/: 01_project_overview.md  02_data_ingestion.md  03_chunking_strategy.md  04_embeddings.md  05_vector_store.md  06_retrieval.md  07_reranking.md  08_query_transformation.md  09_generation.md  10_evaluation.md  11_api_design.md  12_deployment.md  TABLE_OF_CONTENTS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  MetricCard.jsx  Sidebar.jsx  SourceCard.jsx  StatusBadge.jsx
frontend/src/hooks/: useBackendStatus.js
frontend/src/pages/: Chat.jsx  Evaluate.jsx  Ingest.jsx
src/api/: __init__.py  main.py  middleware.py  schemas.py
src/api/routes/: __init__.py  evaluate.py  ingest.py  query.py
src/embeddings/: __init__.py  embedder.py
src/evaluation/: __init__.py  eval_dataset.py  evaluator.py
src/generation/: __init__.py  generator.py  prompt_templates.py
src/ingestion/: __init__.py  chunker.py  cleaner.py  loader.py
src/retrieval/: __init__.py  query_transformer.py  reranker.py  retriever.py
src/utils/: __init__.py  config.py  logger.py
src/vectorstore/: __init__.py  qdrant_store.py
tests/: test_api.py  test_generation.py  test_ingestion.py  test_retrieval.py
